task 1 first commit

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="res/css/style.css">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="res/js/script.js"></script>
     <title>postIt! Just Post It</title>
   </head>
   <body>
@@ -17,6 +19,16 @@
         </div>
         <div class="avatar-container">
           <img src="res/images/avatar.png" class="avatar" alt="Me">
+            <div class = "dropdown-menu">
+                <ul>
+                    <li>
+                        <p>John Doe</p>
+                        <p>john.doe@example.com</p>
+                    </li>
+                    <li><a href="browse.html">Browse</a></li>
+                    <li><a href="login.html">Log Out</a></li>
+                </ul>
+            </div>    
         </div>
       </nav>
     </header>
