--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
           <input type="text" name="search"><button type="button">Search</button>
         </div>
         <div class="avatar-container">
-          <img src="res/images/avatar.png" class="avatar" alt="Me">
+          <img src="" class="avatar" alt="Me">
             <div class = "dropdown-menu">
                 <ul>
                     <li>
-                        <p>John Doe</p>
-                        <p>john.doe@example.com</p>
+                        <p class="name"></p>
+                        <p class="email"></p>
                     </li>
                     <li><a href="browse.html">Browse</a></li>
                     <li><a href="login.html">Log Out</a></li>
