Starting point for task 3

--- a/browse.html
+++ b/browse.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="res/css/style.css">
-    <title>Browse</title>
-</head>
-<body>
-
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="res/css/style.css">
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="res/js/script.js"></script>
+        <title>Browse profiles</title>
+    </head>
+    <body>
+        <section class="profile-container">
+    </section>
 </body>
 </html>
