--- a/browse.html
+++ b/browse.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="res/css/style.css">
+        <link rel="stylesheet" href="res/css/browseStyle.css">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="res/js/script.js"></script>
         <title>Browse profiles</title>
