--- a/browse.html
+++ b/browse.html
@@ -9,8 +9,26 @@
         <script src="res/js/script.js"></script>
         <title>Browse profiles</title>
     </head>
+
     <body>
+        <header>
+            <nav>
+                <div class="logo-container">
+                    <img src="res/images/logo.png" alt="postIt">
+                </div>
+                <div class="search-container">
+                    <input type="text" name="search"><button type="button">Search</button>
+                </div>
+                <div class="avatar-container">
+                </div>
+            </nav>
+        </header>
+
+
+    <div class="main">
         <section class="profile-container">
-    </section>
+        </section>
+
+    </div>
 </body>
 </html>
