--- a/browse.html
+++ b/browse.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="res/css/style.css">
         <link rel="stylesheet" href="res/css/browseStyle.css">
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="res/js/script.js"></script>
+        <script type="module" src="res/js/script.js"></script>
         <title>Browse profiles</title>
     </head>
 
