--- a/browse.html
+++ b/browse.html
@@ -25,10 +25,9 @@
         </header>
 
 
-    <div class="main">
+    <main>
         <section class="profile-container">
         </section>
-
-    </div>
+    </main>
 </body>
 </html>
