--- a/browse.html
+++ b/browse.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <meta charset="UTF-8">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="res/css/style.css">
-        <link rel="stylesheet" href="res/css/browseStyle.css">
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script type="module" src="res/js/script.js"></script>
-        <title>Browse profiles</title>
+      <meta charset="UTF-8">
+      <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="res/css/style.css">
+      <link rel="stylesheet" href="res/css/browseStyle.css">
+      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script type="module" src="res/js/script.js"></script>
+      <title>Browse profiles</title>
     </head>
-
-    <body>
-        <header>
-            <nav>
-                <div class="logo-container">
-                    <img src="res/images/logo.png" alt="postIt">
-                </div>
-                <div class="search-container">
-                    <input type="text" name="search"><button type="button">Search</button>
-                </div>
-                <div class="avatar-container">
-                </div>
-            </nav>
-        </header>
-
-
+  <body>
+    <header>
+      <nav>
+        <div class="logo-container">
+          <img src="res/images/logo.png" alt="postIt">
+        </div>
+        <div class="search-container">
+          <input type="text" name="search">
+          <button type="button">Search</button>
+        </div>
+        <div class="avatar-container">
+        </div>
+      </nav>
+    </header>
     <main>
-        <section class="profile-container">
-        </section>
+      <section class="profile-container">
+      </section>
     </main>
-</body>
+  </body>
 </html>
