--- a/browse.html
+++ b/browse.html
@@ -16,8 +16,7 @@
           <img src="res/images/logo.png" alt="postIt">
         </div>
         <div class="search-container">
-          <input type="text" name="search">
-          <button type="button">Search</button>
+          <input type="text" name="search"><button type="button">Search</button>
         </div>
         <div class="avatar-container">
         </div>
